@@ -7,3 +7,6 @@ Icon=gnome-help.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Core;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=Yelp
+X-GNOME-Bugzilla-Component=general
