@@ -1,3 +1,7 @@
+2002-11-18  Fernando Herrera <fherrera@onirica.com>
+
+	* yelp.desktop.in: add X-GNOME-BUGZILLA stuff
+
 2002-11-08  Mark McLoughlin  <mark@skynet.ie>
 
 	* src/yelp-main.c: (main): register yelp with
